# senippet

./: Cargo.toml  README.md  README_en.md  README_zh-CN.md
src/: main.rs  models.rs  storage.rs
src/commands/: add.rs  delete.rs  edit.rs  info.rs  list.rs  mod.rs  search.rs
