[package]
name = "senprompt"
version = "0.1.0"
authors = ["SentoMK <sentomk040924@gmail.com>"]
description = "Localized knowledge asset management tools. Easy to use."
edition = "2024"
license = "MIT"
repository = "https://github.com/SentoMK/senprompt"
keywords = ["cli"]

[dependencies]
directories = "4.0.1"  # 跨平台目录处理
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
crossterm = { version = "0.29.0" }
colored = "3.0.0"
